syntax = "proto3";

package user;

option go_package = "/proto";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message CreateUserResponse {
  string message = 1;
  bool success = 2;
}

message GetUserRequest {
  uint32 id = 1;
}

message GetUserResponse {
  uint32 id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
}
